# scene-object-recognition

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: dictionary_train.model  dictionary_train_old.model
app/src/main/cpp/: CMakeLists.txt  darknetlib.c
app/src/main/cpp/darknet/include/: darknet.h
app/src/main/cpp/darknet/src/: Header.h  box.h  image.c  image.h  scene.h
app/src/main/java/com/example/hellojni/: DetectionResult.java  ImageObject.java  Yolo.java  svm_predict.java  svm_scale.java  svm_train.java
app/src/main/res/layout/: activity_yolo.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
demo/: README.md
